# lumina

./: .gitignore  CLAUDE.md  Cargo.toml  ROADMAP.md  SPEC_lumina.md  build.rs
assets/icon/: lumina.rc
assets/shaders/: blit.wgsl  thumb.wgsl  ui.wgsl
docs/superpowers/plans/: 2026-06-15-lumina-raw-accurate-color.md  2026-06-15-lumina-v0.1.md  2026-06-15-lumina-v0.2.md  2026-06-15-lumina-v0.3a-ui-foundation.md  2026-06-15-lumina-v0.3b-bottom-bar.md  2026-06-16-lumina-v0.4a-transforms.md  2026-06-16-lumina-v0.4b-exif-read.md  2026-06-16-lumina-v0.4b-exif-write.md  2026-06-16-lumina-v0.4c-navigation-input.md  2026-06-17-lumina-exif-ifd1-duplicate-clear.md  2026-06-17-lumina-v0.4d-exif-write-modes.md  2026-06-17-lumina-v0.5a-thumbnail-cache-prefetch.md  2026-06-17-lumina-v0.5b-folder-watcher.md  2026-06-17-lumina-v0.5c-trackpad-swipe.md  2026-06-17-lumina-v0.5d-distribution.md
docs/superpowers/specs/: 2026-06-15-lumina-raw-accurate-color-design.md  2026-06-15-lumina-v0.1-design.md  2026-06-15-lumina-v0.2-design.md  2026-06-15-lumina-v0.3a-ui-foundation-design.md  2026-06-15-lumina-v0.3b-bottom-bar-design.md  2026-06-16-lumina-v0.4a-transforms-design.md  2026-06-16-lumina-v0.4b-exif-design.md  2026-06-16-lumina-v0.4b-exif-write-design.md  2026-06-16-lumina-v0.4c-navigation-input-design.md  2026-06-17-lumina-exif-ifd1-duplicate-clear-design.md  2026-06-17-lumina-v0.4d-exif-write-modes-design.md  2026-06-17-lumina-v0.5a-thumbnail-cache-prefetch-design.md  2026-06-17-lumina-v0.5b-folder-watcher-design.md  2026-06-17-lumina-v0.5c-trackpad-swipe-design.md  2026-06-17-lumina-v0.5d-distribution-design.md
examples/: make_icon.rs
packaging/: README.txt  package.ps1
src/: app.rs  error.rs  main.rs  prefetch.rs  thumbcache.rs  thumbnail.rs  view.rs  watcher.rs
src/catalog/: mod.rs
src/decoder/: heic.rs  mod.rs  raw.rs  standard.rs
src/exif/: mod.rs  read.rs  tags.rs  write.rs
src/input/: mod.rs
src/platform/: windows.rs
src/renderer/: context.rs  mod.rs  pipeline.rs  text.rs  thumbnail.rs  ui_pipeline.rs
src/ui/: hit.rs  layout.rs  mod.rs  scene.rs  textedit.rs  theme.rs
tests/: make_fixtures.rs
