[package]
name = "lumina"
version = "0.1.0"
edition = "2021"
default-run = "lumina"          # `cargo run` запускает viewer, а не make_fixtures

[dependencies]
winit      = "0.30"
wgpu       = "22"
image      = "0.25"
pollster   = "0.3"
rayon      = "1.10"
bytemuck   = { version = "1.16", features = ["derive"] }
glam       = "0.28"
natord     = "1.0"
rawler     = "0.7"               # pure-Rust RAW decoder (LGPL-2.1)
libheif-rs = "2.7"               # HEIC/HEIF через libheif (FFI)
rfd        = "0.14"
thiserror  = "1"
log        = "0.4"
env_logger = "0.11"
glyphon    = "0.6"               # рендер текста поверх wgpu (cosmic-text)
kamadak-exif = "0.5"             # чтение EXIF Orientation (pure-Rust)
serde_json = "1"                 # разбор JSON-вывода exiftool
arboard    = "3"                 # буфер обмена (Ctrl+C/V/X)
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
] }

[[bin]]
name = "make_fixtures"
path = "tests/make_fixtures.rs"

[profile.dev]
opt-level = 1          # image-декод в debug иначе мучительно медленный

[profile.dev.package."*"]
opt-level = 3          # зависимости (wgpu/image) всегда оптимизированы

[dev-dependencies]
ico = "0.5.0"
